# advent-of-code

./: pyproject.toml
2023/: 6.py  7.py  7_part2.py  8.py
2024/: 1.py  10.py  11.py  12.py  13.py  14.py  17.py  18.py  19.py  2.py  20.py  24.py  3.py  4.py  5.py  6.py  7.py  8.py
