[tool.poetry]
name = "advent-of-code"
version = "0.1.0"
description = ""
authors = ["Simon Stavland <35445149+StavisT@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
numpy = "^2.1.3"
jupyter = "^1.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
